--- a/module_3.html
+++ b/module_3.html
@@ -27,7 +27,8 @@
         Our Menu
     </h1>
     <div class="container" id="main">
-        <div id="div-1">
+        <div class="row">
+        <div id="div-1" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3 align="center">
                 chicken
             </h3> 
@@ -39,7 +40,7 @@
             <a href="module_3.html">back to top</a>
         </div>
 
-        <div id="div-2">
+        <div id="div-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3 align="center">
                 beef
             </h3> 
@@ -51,7 +52,7 @@
             <a href="module_3.html">back to top</a>
         </div>
 
-        <div id="div-3">
+        <div id="div-3" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3 align="center">
                 sushi
             </h3> 
@@ -62,6 +63,7 @@
             </p>
             <a href="module_3.html">back to top</a>
         </div>
+    </div>
     </div>
     <style>
         
